--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,13 @@
+@import './styles/colors';
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: $darker;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
