--- a/src/components/card.module.scss
+++ b/src/components/card.module.scss
@@ -4,11 +4,11 @@
   background-color: $easydark;
   border-radius: 10px;
   box-sizing: border-box; 
-  height: 550px; 
-  margin: 10vh auto;
+  height: 550px;
   max-width: 350px;
   min-width: 264px;
   padding: 20px;
+  width: 100%;
 
   .word {
     font-size: xx-large;
