--- a/src/components/search.module.scss
+++ b/src/components/search.module.scss
@@ -1,14 +1,53 @@
+@import '../styles/colors';
+
 .search {
-  box-sizing: border-box;
-  border-radius: 8px;
-  font-family: 'Open Sans';
-  font-weight: bold;
-  font-size: large;
-  height: 50px;
-  margin-bottom: 20px;
-  max-width: 350px;
-  min-width: 264px;
-  padding-left: 10px;
-  border: 0;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  position: relative;
   width: 100%;
+  
+  .input {
+    border-radius: 8px;
+    font-family: 'Open Sans';
+    box-sizing: border-box;
+    font-weight: bold;
+    font-size: large;
+    height: 50px;
+    margin-bottom: 10px;
+    max-width: 350px;
+    min-width: 264px;
+    padding-left: 10px;
+    border: 0;
+    width: 100%;
+  }
+
+  .results {
+    position: absolute;
+    list-style: none;
+    box-sizing: border-box;
+    padding: 0;
+    max-width: 350px;
+    min-width: 264px;
+    margin-top: 0;
+    top: 55px;
+    width: 100%;
+
+    .item {
+      border: 2px solid #9F8D8D;
+      background-color: $easydark;
+      box-sizing: border-box;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
+      margin-bottom: 5px;
+      padding: 10px;
+      height: 50px;
+      width: 100%;
+
+      &:hover {
+        border: 2px solid white;
+      }
+    }
+  }
 }
