--- a/src/components/card.module.scss
+++ b/src/components/card.module.scss
@@ -5,10 +5,8 @@
   border-radius: 10px;
   box-sizing: border-box; 
   height: 550px;
-  max-width: 350px;
-  min-width: 264px;
+  width: 350px;
   padding: 20px;
-  width: 100%;
 
   .word {
     font-size: xx-large;
@@ -26,5 +24,13 @@
   .meaning {
     margin-top: 20px;
     max-width: 80%;
+    max-height: 315px;
+    overflow-y: hidden;
+  }
+}
+
+@media (max-width: 450px) {
+  .card {
+    width: 99%;
   }
 }
