--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -16,3 +16,15 @@
     display: flex;
   }
 }
+
+@media (max-width: 450px) {
+  .card {
+    flex-direction: column;
+
+    .actions {
+      display: flex;
+      justify-content: center;
+      margin-top: 10px;
+    }
+  }
+}
